# oasis_walk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: CREDITS.md
assets/models/: player.glb
src/: camera.rs  main.rs  player.rs  world.rs
