[package]
name = "oasis_walk"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
avian3d = { version = "0.5", features = ["3d"] }
rand = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
ron = "0.8"

[dev-dependencies]
bevy-inspector-egui = "0.29"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
